<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cooby_news_android_app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="net">连接地址变更</string>
    <string name="click_input_number">点击输入手机号码</string>
    <string name="click_input_pwd">点击输入密码</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>

</resources>