<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <com.cooby.news.widget.AllClearEditText
            android:id="@+id/edit_account"
            style="@style/login_input_style"
            android:hint="@string/click_input_number"
            android:inputType="number"
            android:text="13960917657"
            android:maxLength="11" />

        <com.cooby.news.widget.AllClearEditText
            android:id="@+id/edit_passwd"
            style="@style/login_input_style"
            android:layout_marginTop="10dp"
            android:hint="@string/click_input_pwd"
            android:text="000000"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_login"
            style="@style/login_btn_style"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/login_btn_style"
            android:text="@string/register" />

        <Button
            android:id="@+id/net_btn"
            style="@style/login_btn_style"
            android:text="@string/net" />
    </LinearLayout>

</LinearLayout>